[gd_scene load_steps=13 format=3 uid="uid://cb7i0apyk7kif"]

[ext_resource type="Script" path="res://Stand/TransactionView/StandSetup/StandSetup.gd" id="1_stkue"]
[ext_resource type="PackedScene" uid="uid://c2bkkurj1uowk" path="res://Stand/TransactionView/StandItemButton/StandItemButton.tscn" id="2_weptw"]
[ext_resource type="PackedScene" uid="uid://dhvoo0yx808v7" path="res://Containers/SlotItemButton/SlotItemButton.tscn" id="3_fp3kt"]
[ext_resource type="Texture2D" uid="uid://nygirwtvql0b" path="res://Containers/Sprites/background_Inventory.png" id="4_plg6d"]
[ext_resource type="Texture2D" uid="uid://botoy6wgjeytd" path="res://Stand/TransactionView/Assets/plusoverlay.png" id="5_fcvg1"]
[ext_resource type="Texture2D" uid="uid://77bljncj6jnd" path="res://Stand/TransactionView/Assets/plus.png" id="6_ty6e2"]
[ext_resource type="Texture2D" uid="uid://bt28pqec8cmyl" path="res://Stand/TransactionView/Assets/price.png" id="7_slyjt"]
[ext_resource type="Texture2D" uid="uid://qo07y3vds2u7" path="res://Stand/TransactionView/Assets/minusoverlay.png" id="8_e5cdi"]
[ext_resource type="Texture2D" uid="uid://dc5w1kyeo61ew" path="res://Stand/TransactionView/Assets/minus.png" id="9_nqlka"]
[ext_resource type="Texture2D" uid="uid://dodnq6whgouk5" path="res://Stand/TransactionView/Assets/crossoverlay1.png" id="10_wmdmx"]
[ext_resource type="Texture2D" uid="uid://ds876bi8u3cke" path="res://Stand/TransactionView/Assets/cross1.png" id="11_j4naa"]

[sub_resource type="LabelSettings" id="LabelSettings_3wxqv"]
line_spacing = 2.08165e-12
font_size = 10

[node name="StandSetup" type="Panel" node_paths=PackedStringArray("_items_container")]
texture_filter = 1
anchors_preset = -1
anchor_left = 0.539
anchor_top = 0.541
anchor_right = 0.539
anchor_bottom = 0.541
offset_left = -51.928
offset_top = -34.568
offset_right = 52.072
offset_bottom = 34.432
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_stkue")
MAX_PRICE = 999
_show_panel_info = false
_item_button_scene = ExtResource("2_weptw")
_item_slot_button_scene = ExtResource("3_fp3kt")
_items_container = NodePath("ItemsContainerView")
metadata/_edit_group_ = true

[node name="HoverTexture" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_plg6d")
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="ItemsContainerView" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 16.0
offset_top = -10.0
offset_right = 35.0
offset_bottom = 10.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -20.0
offset_right = -27.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_constants/separation = 9

[node name="PlusButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_fcvg1")
texture_hover = ExtResource("6_ty6e2")

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("7_slyjt")
expand_mode = 5
stretch_mode = 3

[node name="Value" type="Label" parent="VBoxContainer/TextureRect"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.521
anchor_right = 0.5
anchor_bottom = 0.521
offset_left = -24.0
offset_top = -8.504
offset_right = 24.0
offset_bottom = 8.496
text = "100"
label_settings = SubResource("LabelSettings_3wxqv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MinusButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("8_e5cdi")
texture_hover = ExtResource("9_nqlka")

[node name="CloseButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -10.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 10.0
grow_horizontal = 0
texture_normal = ExtResource("10_wmdmx")
texture_hover = ExtResource("11_j4naa")
stretch_mode = 3

[connection signal="pressed" from="VBoxContainer/PlusButton" to="." method="_on_plus_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MinusButton" to="." method="_on_minus_button_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
